game_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 5000
  selector:
    app: game-service
  type: NodePort
