ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: riddle-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myriddle.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 8080
